--- a/src/app/views/customer/customer.component.html
+++ b/src/app/views/customer/customer.component.html
@@ -251,6 +251,9 @@
       <th nz-th nzWidth="160px">
         <span>归属门店</span>
       </th>
+      <th nz-th nzWidth="120px">
+        <span>填写时间</span>
+      </th>
       <th nz-th nzWidth="90px" *ngIf="customerStatus !== 6">
         <span>状态</span>
       </th>
@@ -275,11 +278,11 @@
         <td nz-td>{{data.secondName}}</td>
         <td nz-td>{{data.customerSpreadRelationName}}</td>
         <td nz-td>
-          <a href="javascript: void(0);" (click)="getConversionCount(data)" [hidden]="data.conversionCount || data.conversionCount == 0">查看转化数</a>
-           {{ data.conversionCount || data.conversionCount == 0 ? data.conversionCount : ''}}
+           {{ data.babyAwardCodeCount }}
         </td>
         <td nz-td>{{data.province + data.city + data.area}}</td>
         <td nz-td>{{data.shopName ? data.shopName : '-'}}</td>
+        <td nz-td>{{ data.createTime }}</td>
         <td nz-td *ngIf="customerStatus !== 6">
           <nz-tag [nzColor]="
             data.stage == 0 ? 'pink' : 
@@ -313,10 +316,10 @@
               <label nz-col [nzSpan]="8">宝宝生日</label>
               <div nz-col [nzSpan]="16">{{data.birthday ? data.birthday :'-'}}</div>
             </div>
-            <div nz-col [nzXl]="6" [nzLg]="8" [nzSm]="12" [nzXs]="24">
+            <!-- <div nz-col [nzXl]="6" [nzLg]="8" [nzSm]="12" [nzXs]="24">
               <label nz-col [nzSpan]="8">填写时间</label>
               <div nz-col [nzSpan]="16">{{data.createTime}}</div>
-            </div>
+            </div> -->
             <div nz-col [nzXl]="6" [nzLg]="8" [nzSm]="12" [nzXs]="24">
               <label nz-col [nzSpan]="8">活动价格</label>
               <div nz-col [nzSpan]="16">￥{{data.activityPrice}}</div>
