--- a/src/app/views/customer/customer.component.html
+++ b/src/app/views/customer/customer.component.html
@@ -278,7 +278,10 @@
         <td nz-td>{{data.secondName}}</td>
         <td nz-td>{{data.customerSpreadRelationName}}</td>
         <td nz-td>
-           {{ data.babyAwardCodeCount }}
+          <ng-container *ngIf="data.babyAwardCodeCount == 0">暂无</ng-container>
+          <ng-container *ngIf="data.babyAwardCodeCount != 0">
+            <a href="javascript:;" (click)="previewCount(data.customerBabyId)">{{ data.babyAwardCodeCount }}</a>
+          </ng-container>
         </td>
         <td nz-td>{{data.province + data.city + data.area}}</td>
         <td nz-td>{{data.shopName ? data.shopName : '-'}}</td>
@@ -368,6 +371,50 @@
     </button>
     <button nz-button [nzType]="'primary'" [nzSize]="'large'" (click)="handleOk($event)" [nzLoading]="isConfirmLoading">
       提 交
+    </button>
+  </ng-template>
+</nz-modal>
+
+
+<nz-modal [nzVisible]="isShowAwardCount" [nzWidth]="700" [nzTitle]="awardTitle" [nzContent]="awardContent" [nzFooter]="awardFooter">
+  <ng-template #awardTitle>
+    查看转换(共{{ awardList.length }}条)
+  </ng-template>
+  <ng-template #awardContent>
+    <nz-table #nzTable [nzDataSource]="awardList" [nzIsPagination]="false">
+      <thead nz-thead>
+        <tr>
+          <th nz-th>
+            <span>宝宝昵称</span>
+          </th>
+          <th nz-th>
+            <span>宝宝月龄</span>
+          </th>
+          <th nz-th>
+            <span>省市区</span>
+          </th>
+          <th nz-th>
+            <span>归属门店</span>
+          </th>
+          <th nz-th>
+            <span>手机号码</span>
+          </th>
+        </tr>
+      </thead>
+      <tbody nz-tbody>
+        <tr nz-tbody-tr *ngFor="let data of nzTable.data">
+          <td nz-td>{{ data.secondName || '--' }}</td>
+          <td nz-td>{{ data.birthday ? data.birthday + '个月' : '--' }}</td>
+          <td nz-td>{{ data.province ? data.province + data.city + (data.area || '') : '--' }}</td>
+          <td nz-td>{{ data.shopName || '--' }}</td>
+          <td nz-td>{{ data.parentPhone || '--' }}</td>
+        </tr>
+      </tbody>
+    </nz-table>
+  </ng-template>
+  <ng-template #awardFooter>
+    <button nz-button [nzType]="'default'" [nzSize]="'large'" (click)="isShowAwardCount = false">
+      返 回
     </button>
   </ng-template>
 </nz-modal>
