--- a/src/app/views/xiaochengxu/xiaochengxu.component.html
+++ b/src/app/views/xiaochengxu/xiaochengxu.component.html
@@ -35,98 +35,24 @@
     <div nz-col [nzXl]="6" [nzLg]="8" [nzSm]="12" [nzXs]="24">
       <div nz-form-item nz-row>
         <div nz-form-label nz-col [nzSpan]="5">
-          <label>奖励状态</label>
+          <label [attr.for]="'phone'">家长电话</label>
         </div>
         <div nz-form-control nz-col [nzSpan]="19">
-          <nz-select nzSize="large" formControlName="wxCustomerAnswerState" nzPlaceHolder="请选择奖励状态" nzAllowClear>
-            <nz-option *ngFor="let option of [
-                  { value: 0, label: '发放' },
-                  { value: 1, label: '未发放' },
-                  { value: 2, label: '未知' }
-                ]" [nzLabel]="option.label" [nzValue]="option.value">
-            </nz-option>
-          </nz-select>
+          <nz-input nzSize="large" nzPlaceHolder="请输入家长电话" formControlName="phone" nzId="phone"></nz-input>
         </div>
       </div>
     </div>
     <div nz-col [nzXl]="6" [nzLg]="8" [nzSm]="12" [nzXs]="24">
       <div nz-form-item nz-row>
         <div nz-form-label nz-col [nzSpan]="5">
-          <label [attr.for]="'parentPhone'">家长电话</label>
+          <label>录入时间</label>
         </div>
         <div nz-form-control nz-col [nzSpan]="19">
-          <nz-input nzSize="large" nzPlaceHolder="请输入家长电话" formControlName="parentPhone" nzId="parentPhone"></nz-input>
-        </div>
-      </div>
-    </div>
-    <div nz-col [nzXl]="6" [nzLg]="8" [nzSm]="12" [nzXs]="24">
-      <div nz-form-item nz-row>
-        <div nz-form-label nz-col [nzSpan]="5">
-          <label [attr.for]="'secondName'">宝宝昵称</label>
-        </div>
-        <div nz-form-control nz-col [nzSpan]="19">
-          <nz-input [nzSize]="'large'" nzPlaceHolder="请输入宝宝昵称" formControlName="secondName" nzId="secondName"></nz-input>
-        </div>
-      </div>
-    </div>
-    <div nz-col [nzXl]="6" [nzLg]="8" [nzSm]="12" [nzXs]="24">
-      <div nz-form-item nz-row>
-        <div nz-form-label nz-col [nzSpan]="5">
-          <label>填写日期</label>
-        </div>
-        <div nz-form-control nz-col [nzSpan]="19">
-          <nz-datepicker nz-col [nzSpan]="11" formControlName="filloutStartDate" [nzSize]="'large'" [nzPlaceHolder]="'开始日期'" [nzFormat]="'YYYY-MM-DD'"
+          <nz-datepicker nz-col [nzSpan]="11" formControlName="createStartTime" [nzSize]="'large'" [nzPlaceHolder]="'开始日期'" [nzFormat]="'YYYY-MM-DD'"
             [nzDisabledDate]="_disabledStartDate1"></nz-datepicker>
           <div nz-col [nzSpan]="2" style="text-align: center">-</div>
-          <nz-datepicker nz-col [nzSpan]="11" formControlName="filloutEndDate" [nzSize]="'large'" [nzPlaceHolder]="'结束日期'" [nzFormat]="'YYYY-MM-DD'"
+          <nz-datepicker nz-col [nzSpan]="11" formControlName="createEndTime" [nzSize]="'large'" [nzPlaceHolder]="'结束日期'" [nzFormat]="'YYYY-MM-DD'"
             [nzDisabledDate]="_disabledEndDate1"></nz-datepicker>
-        </div>
-      </div>
-    </div>
-    <!-- <div nz-col [nzXl]="6" [nzLg]="8" [nzSm]="12" [nzXs]="24">
-      <div nz-form-item nz-row>
-        <div nz-form-label nz-col [nzSpan]="5">
-          <label [attr.for]="'priceStart'">活动价格</label>
-        </div>
-        <div nz-form-control nz-col [nzSpan]="19">
-          <nz-input-number nzSize="large" formControlName="priceStart" nzPlaceHolder="最低价格"></nz-input-number>
-          <div nz-col [nzSpan]="2" style="text-align: center">-</div>
-          <nz-input-number nzSize="large" formControlName="priceEnd" nzPlaceHolder="最高价格" [nzMin]="queryForm.get('priceStart').value"></nz-input-number>
-        </div>
-      </div>
-    </div> -->
-    <div nz-col [nzXl]="6" [nzLg]="8" [nzSm]="12" [nzXs]="24">
-      <div nz-form-item nz-row>
-        <div nz-form-label nz-col [nzSpan]="5">
-          <label [attr.for]="'activityPrice'">活动价格</label>
-        </div>
-        <div nz-form-control nz-col [nzSpan]="19">
-          <nz-input [nzSize]="'large'" nzPlaceHolder="请输入活动价格" formControlName="activityPrice" nzId="activityPrice"></nz-input>
-        </div>
-      </div>
-    </div>
-    <div nz-col [nzXl]="6" [nzLg]="8" [nzSm]="12" [nzXs]="24">
-      <div nz-form-item nz-row>
-        <div nz-form-label nz-col [nzSpan]="5">
-          <label>省市区</label>
-        </div>
-        <div nz-form-control nz-col [nzSpan]="19">
-          <nz-cascader formControlName="address" nzSize="large" [nzOptions]="addressItems" nzPlaceHolder="省市区" [nzChangeOnSelect]="true"
-            (nzChange)="_addressChange($event)">
-          </nz-cascader>
-        </div>
-      </div>
-    </div>
-    <div nz-col [nzXl]="6" [nzLg]="8" [nzSm]="12" [nzXs]="24">
-      <div nz-form-item nz-row>
-        <div nz-form-label nz-col [nzSpan]="5">
-          <label>所属门店</label>
-        </div>
-        <div nz-form-control nz-col [nzSpan]="19">
-          <nz-select nzSize="large" formControlName="shopId" nzPlaceHolder="请选择所属门店" [nzShowSearch]="true" nzAllowClear>
-            <nz-option *ngFor="let option of storeItems" [nzLabel]="option.shopName" [nzValue]="option.id" [nzDisabled]="option.disabled">
-            </nz-option>
-          </nz-select>
         </div>
       </div>
     </div>
@@ -136,57 +62,8 @@
           <label>客户来源</label>
         </div>
         <div nz-form-control nz-col [nzSpan]="19">
-          <nz-select nzSize="large" formControlName="customerSpreadRelationId" nzPlaceHolder="请选择客户来源" [nzShowSearch]="true" nzAllowClear>
+          <nz-select nzSize="large" formControlName="spreadId" nzPlaceHolder="请选择客户来源" [nzShowSearch]="true" nzAllowClear>
             <nz-option *ngFor="let option of customerSpreadItems" [nzLabel]="option.name" [nzValue]="option.id" [nzDisabled]="option.disabled">
-            </nz-option>
-          </nz-select>
-        </div>
-      </div>
-    </div>
-    <div nz-col [nzXl]="6" [nzLg]="8" [nzSm]="12" [nzXs]="24">
-      <div nz-form-item nz-row>
-        <div nz-form-label nz-col [nzSpan]="5">
-          <label>预约日期</label>
-        </div>
-        <div nz-form-control nz-col [nzSpan]="19">
-          <nz-datepicker nz-col [nzSpan]="11" formControlName="preStartDate" [nzSize]="'large'" [nzPlaceHolder]="'开始日期'" [nzFormat]="'YYYY-MM-DD'"
-            [nzDisabledDate]="_disabledStartDate2"></nz-datepicker>
-          <div nz-col [nzSpan]="2" style="text-align: center">-</div>
-          <nz-datepicker nz-col [nzSpan]="11" formControlName="preEndDate" [nzSize]="'large'" [nzPlaceHolder]="'结束日期'" [nzFormat]="'YYYY-MM-DD'"
-            [nzDisabledDate]="_disabledEndDate2"></nz-datepicker>
-        </div>
-      </div>
-    </div>
-    <div nz-col [nzXl]="6" [nzLg]="8" [nzSm]="12" [nzXs]="24">
-      <div nz-form-item nz-row>
-        <div nz-form-label nz-col [nzSpan]="5">
-          <label>跟踪时间</label>
-        </div>
-        <div nz-form-control nz-col [nzSpan]="19">
-          <nz-datepicker nz-col [nzSpan]="11" formControlName="visitStartDate" [nzSize]="'large'" [nzPlaceHolder]="'开始日期'" [nzFormat]="'YYYY-MM-DD'"
-            [nzDisabledDate]="_disabledStartDate3"></nz-datepicker>
-          <div nz-col [nzSpan]="2" style="text-align: center">-</div>
-          <nz-datepicker nz-col [nzSpan]="11" formControlName="visitEndDate" [nzSize]="'large'" [nzPlaceHolder]="'结束日期'" [nzFormat]="'YYYY-MM-DD'"
-            [nzDisabledDate]="_disabledEndDate3"></nz-datepicker>
-        </div>
-      </div>
-    </div>
-    <div nz-col [nzXl]="6" [nzLg]="8" [nzSm]="12" [nzXs]="24" *ngIf="customerStatus === 1">
-      <div nz-form-item nz-row>
-        <div nz-form-label nz-col [nzSpan]="5">
-          <label>状态</label>
-        </div>
-        <div nz-form-control nz-col [nzSpan]="19">
-          <nz-select nzSize="large" formControlName="stage" nzPlaceHolder="请选择状态" [nzShowSearch]="true" nzAllowClear>
-            <nz-option *ngFor="let option of [
-                  { value: 0, label: '新用户' },
-                  { value: 1, label: '首次跟踪' },
-                  { value: 2, label: '二次跟踪' },
-                  { value: 3, label: '已预约' },
-                  { value: 4, label: '已分配' },
-                  { value: 5, label: '已体验' },
-                  { value: 6, label: '已办卡' }
-                ]" [nzLabel]="option.label" [nzValue]="option.value" [nzDisabled]="option.disabled">
             </nz-option>
           </nz-select>
         </div>
@@ -227,13 +104,13 @@
         <span>客户来源</span>
       </th>
       <th nz-th nzWidth="120px">
-        <span>得奖状态</span>
+        <span>奖励状态</span>
       </th>
       <th nz-th nzWidth="120px">
         <span>手机验证</span>
       </th>
       <th nz-th nzWidth="120px">
-        <span>手机号码</span>
+        <span>家长电话</span>
       </th>
       <th nz-th nzWidth="80px">
         <span>转换数</span>
@@ -248,7 +125,7 @@
       <tr nz-tbody-tr>
         <td nz-td>{{ data.nickName }}</td>
         <td nz-td>{{ data.babySex == null ? '-' : data.babySex == 1 ? '小王子' : '小公主' }}</td>
-        <td nz-td>{{ data.sex == null || data.sex == 0 ? '-' : data.sex == 1 ? '小王子' : '小公主' }}</td>
+        <td nz-td>{{ data.sex == null || data.sex == 0 ? '-' : data.sex == 1 ? '男' : '女' }}</td>
         <td nz-td>{{ data.country }} {{ data.province }} {{ data.city }}</td>
         <td nz-td>{{ data.createTime }}</td>
         <td nz-td>{{ data.babyBirthday }}</td>
@@ -258,7 +135,8 @@
         <td nz-td>{{ data.phone }}</td>
         <td nz-td>{{ data.conversionNumber }}</td>
         <td nz-td>
-          <a *ngIf="data.conversionNumber > 0" href="javascript: void(0);" (click)="showTreeModal(data.wxCustomerId)">关系图</a>
+          <a *ngIf="data.conversionNumber > 0" href="javascript: void(0);" (click)="showTreeModal(data.wxCustomerId, data.nickName)">关系图</a>
+          <a href="javascript: void(0);" [routerLink]="['/home/details', data.wxCustomerId]">详情</a>
         </td>
       </tr>
     </ng-template>
